# Portfolio_Chess

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
src/portfolio_chess/: __main__.py  cli.py  ui_tk.py
src/portfolio_chess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/portfolio_chess/core/: __init__.py  board.py  game.py  move.py  notation.py  rules.py  types.py
tests/: test_advanced_legality.py  test_apply_move.py  test_bishop_moves.py  test_board_init.py  test_castling.py  test_check_legality.py  test_draw_rules.py  test_en_passent.py  test_endgame.py  test_fen.py  test_king_moves.py  test_knight_moves.py  test_notation.py  test_pawn_captures.py  test_pawn_moves.py  test_promotion.py  test_queen_moves.py  test_rook_moves.py
